--- a/.buckconfig
+++ b/.buckconfig
@@ -3,4 +3,5 @@
   target = Google Inc.:Google APIs:23
 
 [maven_repositories]
-  central = https://repo1.maven.org/maven2
+  central = https://repo1.maven.org/maven
+nguyen van luu
